WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135254
[iOS WK1] CSS viewport units use the wrong viewport size in WebKit1
https://bugs.webkit.org/show_bug.cgi?id=135254
Summary
[iOS WK1] CSS viewport units use the wrong viewport size in WebKit1
Simon Fraser (smfr)
Reported
2014-07-24 13:48:22 PDT
[iOS WK1] CSS viewport units use the wrong viewport size in WebKit1
Attachments
Patch
(5.40 KB, patch)
2014-07-24 13:50 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-07-24 13:50:09 PDT
Created
attachment 235456
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-07-24 13:50:29 PDT
<
rdar://problem/17781423
>
WebKit Commit Bot
Comment 3
2014-07-24 18:05:33 PDT
Comment on
attachment 235456
[details]
Patch Clearing flags on attachment: 235456 Committed
r171567
: <
http://trac.webkit.org/changeset/171567
>
WebKit Commit Bot
Comment 4
2014-07-24 18:05:36 PDT
All reviewed patches have been landed. Closing bug.
Sam Sneddon [:gsnedders]
Comment 5
2022-07-14 10:18:39 PDT
***
Bug 131981
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug